Fixed Scrolling Issue on Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -5196,7 +5196,7 @@ a.close.disabled {
   /*background-color: rgba(226,230,234,1);
   background-color: rgba(255,255,255,1);
   background-image: url('testimonial-bg.jpeg');*/
-  background:rgba(0, 0, 0, 0.9) url('testimonial-bg.jpeg');
+  background:rgba(0, 0, 0, 0.9) url('../images/testimonial-bg.jpeg');
   background-blend-mode: darken;
   height: 100%;
 
